@@ -1,5 +1,9 @@
 About: A tool for making hypothetical tropical cyclone tracks (WIP)
 
+v20220803a:
+    + Added saving/loading of seasons
+    + Added autosave
+    % Using Dexie.js
 v20220320a:
     * Colors updated to match new Wikipedia storm colors
         > Legacy colors can be toggled with a checkbox or keyboard shortcut "l"
